--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                         My service areas is 35 km radius from Runcorn,4113.
                         People can pick the design from my customized menu.
                         The service price starts
-                        at <span class="font-weight-bold">$130</span> for the first hour.
+                        at <span class="font-weight-bold">$180</span> for the first hour.
+                        one and half hour service is 230 and two-hour-service is 260
                         *Travel fee apply
 
                     </p>
@@ -220,8 +221,10 @@
 
                                 </p>
 
-                                <h4 class="card-title"> the price starts at <span class="font-weight-bold">$130</span>
-                                    per hour.
+                                <h4 class="card-title"> The service price starts
+                                    at <span class="font-weight-bold">$180</span> for the first hour.
+                                    one and half hour service is 230 and two-hour-service is 260
+                                    
                                 </h4>
 
 
