--- a/index.html
+++ b/index.html
@@ -4,29 +4,21 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Best Balloon Twisting artist in Brisbane for hire. Add some extra fun to your kid's birthday or corporate event with professional balloon twisting.
-        Joe created many unique balloon designs like Hello Kitty and Pickachu." />
-    <meta name="keywords"
-        content="Balloon Twister for parties, kids entertainment brisbane, balloon twister brisbane, birthday party balloon twisting, brisbane best balloon artist" />
+    <meta name="description" content="Hire the best Balloon Twisting artist in Brisbane. Add fun to your kid's birthday or corporate event with professional balloon twisting. Unique balloon designs like Hello Kitty and Pikachu." />
+    <meta name="keywords" content="Balloon Twister for parties, kids entertainment Brisbane, balloon twister Brisbane, birthday party balloon twisting, Brisbane best balloon artist" />
     <meta name="author" content="Joy Joe" />
-    <title>Hire Balloon Twisting Artist Brisbane</title>
+    <title>Hire Balloon Twisting Artist in Brisbane | Joy Joe</title>
     <!-- Favicon-->
-
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <link rel="canonical" href="https://www.joyjoeballoon.com/" />
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
-        rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.0/font/bootstrap-icons.min.css"
-        integrity="sha512-vDQXRXKXpBHSJMOkJqqzWhgcAcaG3Bab87wklsuBuYOanSnZ3y76EJj1CpMxPW8o5A5PW7ScywzKC2G4BJN53A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.0/font/bootstrap-icons.min.css" integrity="sha512-vDQXRXKXpBHSJMOkJqqzWhgcAcaG3Bab87wklsuBuYOanSnZ3y76EJj1CpMxPW8o5A5PW7ScywzKC2G4BJN53A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Meta Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
@@ -108,7 +100,7 @@
                         People can pick the design from my customized menu.
                         The service price starts
                         at <span class="font-weight-bold">$180</span> for the first hour.
-                        one and half hour service is 230 and two-hour-service is 260
+                        one and half hour service is $240 and two-hour-service is $280
                         *Travel fee apply
 
                     </p>
@@ -223,7 +215,7 @@
 
                                 <h4 class="card-title"> The service price starts
                                     at <span class="font-weight-bold">$180</span> for the first hour.
-                                    one and half hour service is 230 and two-hour-service is 260
+                                    one and half hour service is $240 and two-hour-service is $280
                                     
                                 </h4>
 
@@ -418,10 +410,10 @@
                                     alt="Balloon Number one bouquet with golden foil balloon and fox latex balloon">
                             </div>
                             <div class="card-body">
-                                <h3 class="card-title">Balloon Number Bouquet - Premade price start at $80</h3>
-                                <h4>Speical decoration - suitable for indoor activity</h4>
+                                <h3 class="card-title">Balloon Number Bouquet - Premade price start at $90</h3>
+                                <h4>Special decoration - suitable for indoor activity</h4>
                                 <p class="card-text">
-                                    Baloon Bouquet has two parts, the first part is the foil number and the second part
+                                    Balloon Bouquet has two parts, the first part is the foil number and the second part
                                     is the latex balloon decoration.
                                     Foil Balloon has different <a rel="no follows"
                                         href="https://www.balloonagencies.com.au/products/foil_balloons/numbers/mid_size/">size
@@ -429,11 +421,6 @@
                                     I will then design the rest part to fit your needs. It can be Pikachu, Unicorn and
                                     more.
                                     The medium size of balloon number is 95*70*70 cm. Different size available.
-                                <h4>Why</h4>
-                                If you want to add the uniqueness to your birthday party, then this is suitable for you.
-                                All of our balloon number bouquet is handmade and customized for you only.
-                                I will do my search the design the color calettes add my special touch to it.
-                                <strong>Good for table centerpeiece decoration</strong>
                                 </p>
                                 <a class="btn btn-info btn-xl" href="sms:0432794642">BOOK
                                     NOW</a>
@@ -448,7 +435,7 @@
                                     alt="Balloon candy cup with Unicorn animal on top">
                             </div>
                             <div class="card-body">
-                                <h3 class="card-title">Balloon Candy Cup - Premade price start at $15</h3>
+                                <h3 class="card-title">Balloon Candy Cup - Premade price start at $30</h3>
 
                                 <p class="card-text">
                                 <h4>What is the balloon candy cup?</h4>
