--- a/frequent-asked-questions.html
+++ b/frequent-asked-questions.html
@@ -9,6 +9,12 @@
     <meta name="keywords"
         content="balloon twisting service area, balloon materials safety , how to book a balloon twisting, frequent-asked-questions, birthday party balloon twisting" />
     <meta name="author" content="Joy Joe" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Balloon Twisting Service FAQ's" />
+    <meta property="og:description" content="Most frequent asked questions from balloon twisting business, what I should know before booking a balloon artist?" />
+    <meta property="og:image" content="https://www.joyjoeballoon.com/assets/img/portfolio/thumbnails/logo.png" />
+    <meta property="og:url" content="https://www.joyjoeballoon.com/frequent-asked-questions.html" />
+    <meta name="twitter:card" content="summary_large_image" />
     <title>Balloon Twisting Service FAQ's</title>
     <link rel="canonical" href="https://www.joyjoeballoon.com/frequent-asked-questions.html" />
     <!-- Favicon-->
@@ -124,7 +130,7 @@
                     <p>
                     <div class="collapse" id="collapse1">
                         <div class="mb-3 px-3">
-                            Depending on the complexity, Ｉ can make 15~20 balloons per hour if the kids pick the
+                            Depending on the complexity, I can make 15~20 balloons per hour if the kids pick the
                             design
                             from the menu.
                         </div>
@@ -229,7 +235,7 @@
 
                     <div class="collapse" id="collapse9">
                         <div class="mb-3 px-3">
-                            I requests 30 dollars non-refundable deposit to lock the service time. We can change the service when I am available.
+                            I request a $30 non-refundable deposit to lock the service time. We can change the service when I am available.
                         </div>
                     </div>
                     </p>
@@ -242,7 +248,7 @@
                     <div class="collapse" id="collapse10">
                         <div class="mb-3 px-3">
                             I provide balloon twisting services in Brisbane and the surrounding areas.
-                            I serve 35 km radius from Runcorn,Brisbane. For further distance, traval fee will be discussed. 
+                            I serve a 35 km radius from Runcorn, Brisbane. For further distances, a travel fee will be discussed. 
                             If you're unsure if I cover your location, don't hesitate to ask.
                         </div>
                     </div>
@@ -256,8 +262,8 @@
                     <div class="collapse" id="collapse11">
                         <div class="mb-3 px-3">
                             My pricing depends on the location and duration of the event. 
-                            The price start at 180 per hour plus travel fee.
-                            1.5 hours is 240 and 2 hours is 280 plus travel fee.
+                            The price starts at $180 per hour plus a travel fee.
+                            1.5 hours is $240 and 2 hours is $280 plus a travel fee.
                             I'll be happy to provide you with a quote once I have more details about your specific requirements.
                         </div>
                     </div>
