--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="description" content="Hire the best Balloon Twisting artist in Brisbane. Add fun to your kid's birthday or corporate event with professional balloon twisting. Unique balloon designs like Hello Kitty and Pikachu." />
     <meta name="keywords" content="Balloon Twister for parties, kids entertainment Brisbane, balloon twister Brisbane, birthday party balloon twisting, Brisbane best balloon artist" />
     <meta name="author" content="Joy Joe" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Hire Balloon Twisting Artist in Brisbane | Joy Joe" />
+    <meta property="og:description" content="Hire the best Balloon Twisting artist in Brisbane. Add fun to your kid's birthday or corporate event with professional balloon twisting. Unique balloon designs like Hello Kitty and Pikachu." />
+    <meta property="og:image" content="https://www.joyjoeballoon.com/assets/img/portfolio/thumbnails/logo.png" />
+    <meta property="og:url" content="https://www.joyjoeballoon.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
     <title>Hire Balloon Twisting Artist in Brisbane | Joy Joe</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
