--- a/testimonials.html
+++ b/testimonials.html
@@ -4,10 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description"
-        content="Happy cutomers' testimonials for hiring the balloon twisting expert at their birthday parties" />
-    <meta name="keywords"
-        content="Testimonials for balloon animal maker in Brisbane, testimonials for balloon twister brisbane, testimonials for balloon twisting brisbane, testimonials for party balloon twisting" />
+    <meta name="description" content="Happy customers' testimonials for hiring the balloon twisting expert at their birthday parties in Brisbane." />
+    <meta name="keywords" content="Testimonials, balloon animal maker, Brisbane, balloon twister, balloon twisting, party balloon twisting, reviews" />
     <meta name="author" content="Joy Joe" />
     <link rel="canonical" href="https://www.joyjoeballoon.com/testimonials.html" />
     <title>Testimonials</title>
