--- a/how-balloon-artist-entertain-your-children.html
+++ b/how-balloon-artist-entertain-your-children.html
@@ -9,6 +9,12 @@
     <meta name="keywords"
         content="Balloon twisting artist Brisbane, special balloon design menu, Balloon making process" />
     <meta name="author" content="Joy Joe" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="How the Balloon Twisting Artist Joe Entertains Everyone" />
+    <meta property="og:description" content="Joe designed his special balloon menu so kids can lineup and pick the designs they like." />
+    <meta property="og:image" content="https://www.joyjoeballoon.com/assets/img/portfolio/thumbnails/logo.png" />
+    <meta property="og:url" content="https://www.joyjoeballoon.com/how-balloon-artist-entertain-your-children.html" />
+    <meta name="twitter:card" content="summary_large_image" />
     <title>How the Balloon Twisting Artist Joe Entertains everyone </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="canonical" href="https://www.joyjoeballoon.com/how-balloon-artist-entertain-your-children.html" />
@@ -90,16 +96,16 @@
                 <h2 class="mb-4 mt-4">Before the Event</h2>
 
                 <div class="col-lg-8 col-xs-12 text-center">
-                    <h3>I am super approchable and responsive</h3>
-                    <p>If you need to change time or location, simply text me and I will check his calender and get
+                    <h3>I am super approachable and responsive</h3>
+                    <p>If you need to change time or location, simply text me and I will check my calendar and get
                         back to you as soon as possible.
                         I will double check with you 3 days before the event to make sure everything is correct.
-                        Once I arrive the event location, I will confirm the location about where I setup.( Avoid
+                        Once I arrive at the event location, I will confirm the location about where I setup.( Avoid
                         in direct of
                         sunlight, right beside DJ, no space for a line to form).
                         I also understand the traffic in Brisbane is difficult to predict. So I will aim to arrive 10
                         minutes before the event starts.
-                        No confirmation is too much, I would like to dobule check the price, location and start time is
+                        No confirmation is too much, I would like to double check the price, location and start time is
                         100% correct.
                     </p>
 
@@ -121,7 +127,7 @@
 
                     <h2>Preparation is the key</h2>
                     <p class="text-start">As a balloon twisting artist, I stock up different kinds of balloons.
-                        You can almost tell if the balloon twisting artist is professional by looking his gears.
+                        You can almost tell if the balloon twisting artist is professional by looking at his gears.
                     </p>
 
                 </div>
@@ -129,7 +135,7 @@
                     <div class="col-lg-4 col-xl-4 text-center">
 
                         <img class="img-fluid" src="./assets/img/balloon_electroic_pump.jpg"
-                            alt="balloon twisting menu" />
+                            alt="balloon twisting electric pump" />
 
                     </div>
                     <div class="col-lg-4  col-xl-4  text-center mt-2">
@@ -137,15 +143,15 @@
                 
 
                         <p class="text-start">
-                            As a professional balloon twister, Joe has invested in the best tool and materials so we can
+                            As a professional balloon twister, Joe has invested in the best tools and materials so we can
                             have safe and fun experience.
-                            Joe uses Electric pump to speed up his balloon twisting process, which allows him to make
+                            Joe uses an electric pump to speed up his balloon twisting process, which allows him to make
                             more
                             complex designs.
-                            It also reduce the risk of spreading bacteria, which is more important after COVID-19
+                            It also reduces the risk of spreading bacteria, which is more important after COVID-19
                         </p>
 
-                        <p class="text-start">Joe primarily uses Sempertex balloon for all his balloon animals.
+                        <p class="text-start">Joe primarily uses Sempertex balloons for all his balloon animals.
                             <a href="https://en.sempertex.com/pages/nature-first"> Sempertex</a> balloons are made of
                             natural latex from the rubber tree. They are free of TMTD, with no plasticizers, fillers, or
                             cost-reducing agents.
@@ -173,10 +179,10 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="./assets/menu/1.png" class="d-block w-100"
-                                    alt="balloon twisting mickey mouse">
+                                    alt="balloon twisting Mickey Mouse">
                             </div>
                             <div class="carousel-item">
-                                <img src="./assets/menu/2.png" class="d-block w-100" alt="balloon twisting hello kitty">
+                                <img src="./assets/menu/2.png" class="d-block w-100" alt="balloon twisting Hello Kitty">
                             </div>
 
                         </div>
@@ -248,7 +254,7 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="assets/img/balloonAnimals/dinosaur.webp" class="d-block w-100"
-                                    alt="balloon sculpture dinosouar">
+                                    alt="balloon sculpture dinosaur">
                             </div>
                             <div class="carousel-item">
                                 <img src="assets/img/balloonAnimals/frog.webp" class="d-block w-100"
