--- a/who-is-joyjoe.html
+++ b/who-is-joyjoe.html
@@ -8,6 +8,15 @@
         content="How Joy Joe started his balloon twsiting career and turn it into a balloon entertainment business" />
     <meta name="keywords" content="balloon artist, balloon twisting for parties, magic and balloon twisting" />
     <meta name="author" content="Joy Joe" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Who is Joy Joe? The Origin of a Balloon Twister" />
+    <meta property="og:description" content="Learn how Joy Joe started his balloon twisting career and turned it into a successful balloon entertainment business." />
+    <meta property="og:image" content="https://www.joyjoeballoon.com/assets/img/portfolio/thumbnails/logo.png" />
+    <meta property="og:url" content="https://www.joyjoeballoon.com/who-is-joyjoe.html" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Who is Joy Joe? The Origin of a Balloon Twister" />
+    <meta name="twitter:description" content="Learn how Joy Joe started his balloon twisting career and turned it into a successful balloon entertainment business." />
+    <meta name="twitter:image" content="https://www.joyjoeballoon.com/assets/img/portfolio/thumbnails/logo.png" />
     <title>Who is Joy Joe? the origin of a balloon twister </title>
     <link rel="canonical" href="https://www.joyjoeballoon.com/who-is-joyjoe.html" />
     <!-- Favicon-->
@@ -111,44 +120,25 @@
 
     <section>
         <div class="container-sm h-50 shadow p-3 mb-1 bg-white rounded">
-            <div class="row  justify-content-center text-center align-items-center ">
-                <h2 class="mb-4 mt-4">Who is Joy Joe?</h2>
+            <div class="row justify-content-center text-center align-items-center">
+                <h1 class="mb-4 mt-4">Who is Joy Joe?</h1>
                 <div class="col-lg-3 col-xl-3 text-center">
-
-                    <img class="img-fluid" src="./assets/img/magicjoe.PNG" alt="joy joe with a child holding a balloon" />
-                    <img class="img-fluid" src="./assets/img/magicjoeandpuppet.PNG" alt="joy joe with a child holding a balloon" />
+                    <img class="img-fluid" src="./assets/img/magicjoe.PNG" alt="Joy Joe with a child holding a balloon" />
+                    <img class="img-fluid" src="./assets/img/magicjoeandpuppet.PNG" alt="Joy Joe with a child holding a balloon and a puppet" />
                 </div>
-                <div class="col-lg-6  col-xl-5   ">
-
-                    <h3>Passionate Balloon Artist in Brisbane</h3>
-                    <p class="text-start">I learned the balloon twisting skill when he was at University. I actually joined a
-                        <strong>Magic Group</strong> as I wanted to learn some magic tricks. At that time, I
-                        volunteered helping children's assignments. Children love me as I always shows them
-                        new tricks.
-                    </p>
-                    <p class="text-start">One day, my magic teacher taught me a new trick, which uses the balloon puppet dog to find an audience choosen card! I then fell in love with this new talent.</p>
-                  <p class="text-start">Ten years ago, I thought that maybe make balloon animals for parties is a good idea.
-                      I decided to turn my passion into a business. Now, I have been to many birthday parties and Cooperation evennts. Looking forward in seeing you!
-                    
-                  </p>
-                  <h3>How I improve my skills</h3>
-                
-                  <p class="text-start">
-                  Ｉactually join <a href="https://balloonartistcollege.com/">Balloon Artist College</a> to upgrade his magic power.
-                  Yes! There is a Balloon Artist College. It teaches advanced balloon desgins and the priciple of creating your own designs.
-                   I also attend local artist meetup to make friends with other artists. And share the information of the balloon making trend.
-                   </p>
-                   <h4>What I love about twisting balloon at birthday parties?</h4>
-                   <p class="text-start">
-                   Hey! When I first started I was suprised by wathcing kids hitting horse toy. Yeah, I now know it's called Piñatas.
-                   In my country, Taiwan, we don't have this kind activites. I feel I am belessed as I am able to see how different cultures celebrating their birthday parties.
-                   I have tried different food and desserts. Plus, I also enjoy wathcing the little happy faces when they get my balloons.
-                </p>
+                <div class="col-lg-6 col-xl-5">
+                    <h2>Passionate Balloon Artist in Brisbane</h2>
+                    <p class="text-start">I learned the balloon twisting skill when I was at University. I actually joined a <strong>Magic Group</strong> as I wanted to learn some magic tricks. At that time, I volunteered helping children's assignments. Children love me as I always show them new tricks.</p>
+                    <p class="text-start">One day, my magic teacher taught me a new trick, which uses the balloon puppet dog to find an audience chosen card! I then fell in love with this new talent.</p>
+                    <p class="text-start">Ten years ago, I thought that maybe making balloon animals for parties is a good idea. I decided to turn my passion into a business. Now, I have been to many birthday parties and corporate events. Looking forward to seeing you!</p>
+                    <h2>How I Improve My Skills</h2>
+                    <p class="text-start">I actually joined <a href="https://balloonartistcollege.com/">Balloon Artist College</a> to upgrade my magic power. Yes! There is a Balloon Artist College. It teaches advanced balloon designs and the principles of creating your own designs. I also attend local artist meetups to make friends with other artists and share information about balloon making trends.</p>
+                    <h3>What I Love About Twisting Balloons at Birthday Parties</h3>
+                    <p class="text-start">Hey! When I first started, I was surprised by watching kids hitting a horse toy. Yeah, I now know it's called Piñatas. In my country, Taiwan, we don't have these kinds of activities. I feel blessed as I am able to see how different cultures celebrate their birthday parties. I have tried different foods and desserts. Plus, I also enjoy watching the little happy faces when they get my balloons.</p>
                 </div>
             </div>
             <hr class="divider divider-light" />
-
-
+        </div>
     </section>
 
 
