--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                         People can pick the design from my customized menu.
                         The service price starts
                         at <span class="font-weight-bold">$180</span> for the first hour.
-                        one and half hour service is $240 and two-hour-service is $280
-                        *Travel fee apply
+                        One and a half hour service is <strong>$250</strong> and two-hour service is <strong>$320</strong>.
+                        *Travel fee applies.
 
                     </p>
 
@@ -221,7 +221,7 @@
 
                                 <h4 class="card-title"> The service price starts
                                     at <span class="font-weight-bold">$180</span> for the first hour.
-                                    one and half hour service is $240 and two-hour-service is $280
+                                    One and a half hour service is <strong>$250</strong> and two-hour service is <strong>$320</strong>.
                                     
                                 </h4>
 
@@ -416,7 +416,7 @@
                                     alt="Balloon Number one bouquet with golden foil balloon and fox latex balloon">
                             </div>
                             <div class="card-body">
-                                <h3 class="card-title">Balloon Number Bouquet - Premade price start at $90</h3>
+                                <h3 class="card-title">Balloon Number Bouquet - Premade price start at $100</h3>
                                 <h4>Special decoration - suitable for indoor activity</h4>
                                 <p class="card-text">
                                     Balloon Bouquet has two parts, the first part is the foil number and the second part
